--- a/package.json
+++ b/package.json
@@ -16,18 +16,33 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "css-star-rating": "^1.3.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
+    "next-i18next": "^11.2.1",
+    "nodemailer": "^6.7.7",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
+    "react-star-rate": "^0.2.0",
     "superjson": "^1.9.1",
+    "three": "^0.142.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/three": "^0.142.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
